--- a/index.html
+++ b/index.html
@@ -34,18 +34,58 @@
           <p>
             Digital agency is your online team Management Tool-Easy and Prompt.
           </p>
+          <button class="button">Contact us</button>
         </div>
         <img src="IMG/Escritorio.png" alt="mujer creativa" />
       </section>
       <section class="content">
         <article>
-          <h3>Artículo 1</h3>
-          <p>Contenido del artículo 1.</p>
+          <h3>Broadcast Channels</h3>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe id
+            vel voluptatibus facilis facere, consequuntur quisquam sit
+            temporibus ipsum dolore illum inventore blanditiis est nam tenetur
+            recusandae, accusantium hic. Consectetur!
+          </p>
         </article>
         <article>
-          <h3>Artículo 2</h3>
-          <p>Contenido del artículo 2.</p>
+          <h3>Resources</h3>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae
+            velit enim, eligendi repudiandae officia corporis nostrum ipsam qui
+            temporibus adipisci cupiditate accusantium sequi dolor animi
+            ducimus. Voluptatum libero in hic.
+          </p>
         </article>
+      </section>
+      <section class="images">
+        <h2>OPINIONS</h2>
+        <div class="image-container">
+          <div class="tooltip-container">
+            <img
+              src="IMG/hombre1.png"
+              alt="señor negro de pie"
+              class="tooltip-image"
+            />
+            <span class="tooltip-text">Wonderful experience</span>
+          </div>
+          <div class="tooltip-container">
+            <img
+              src="IMG/mujer3.png"
+              alt="hombre ordenador"
+              class="tooltip-image"
+            />
+            <span class="tooltip-text">100% recommended</span>
+          </div>
+          <div class="tooltip-container">
+            <img
+              src="IMG/Hombre2.png"
+              alt="señora emprendedora"
+              class="tooltip-image"
+            />
+            <span class="tooltip-text">Great professionals</span>
+          </div>
+        </div>
       </section>
     </main>
     <footer>
